syntax = "proto3";

package productmanagement;

option go_package = "github.com/DamianoSamperi/microservices-demo-local/src/productmanagementservice/genproto;productmanagement";

service ProductManagementService {
  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {}
}

message AddProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  bytes picture = 4;
  string price_usd_currency_code = 5;
  int32 price_usd_units = 6;
  int64 price_usd_nanos = 7;
  string categories = 8;
}

message AddProductResponse {
  bool success = 1;
  string message = 2;
  string id = 3;
}
